# agent-chat-cli-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  agent-chat-cli.config.yaml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  type-check.yml
docs/: architecture.md
src/agent_chat_cli/: app.py
src/agent_chat_cli/components/: balloon_spinner.py  caret.py  chat_history.py  flex.py  header.py  messages.py  model_selection_menu.py  slash_command_menu.py  spacer.py  thinking_indicator.py  tool_permission_prompt.py  user_input.py
src/agent_chat_cli/core/: actions.py  agent_loop.py  mcp_inference.py  message_bus.py  renderer.py  styles.tcss  ui_state.py
src/agent_chat_cli/docs/: architecture.md
src/agent_chat_cli/prompts/: github.md  system.md
src/agent_chat_cli/system/: actions.py  agent_loop.py  message_bus.py  styles.tcss
src/agent_chat_cli/utils/: __init__.py  actions.py  agent_loop.py  config.py  enums.py  format_tool_input.py  logger.py  message_bus.py  (+5 more)
tests/: conftest.py  test_app.py  test_mcp_inference.py
tests/components/: test_chat_history.py  test_header.py  test_messages.py  test_model_selection_menu.py  test_slash_command_menu.py  test_thinking_indicator.py  test_tool_permission_prompt.py  test_user_input.py
tests/core/: test_actions.py  test_agent_loop.py  test_message_bus.py  test_renderer.py  test_ui_state.py
tests/fixtures/: test_config.yaml  test_config_with_agents.yaml  test_config_with_disabled.yaml
tests/utils/: test_config.py  test_enums.py  test_format_tool_input.py  test_mcp_server_status.py  test_save_conversation.py  test_system_prompt.py  test_tool_info.py
