[project]
name = "agent_chat_cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "claude-agent-sdk>=0.1.10",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "textual[syntax]>=6.7.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.14.7",
    "textual-dev>=1.8.0",
    "ty>=0.0.2",
]

[project.scripts]
chat = "agent_chat_cli.app:main"
dev = "textual_dev.cli:run"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
include = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
pythonVersion = "3.14"
